2007-07-20 [colin]	2.10.0cvs49

	* src/main.c
		Unref stuff even on error
	* src/wizard.c
		disconnect signals only at the very
		end of the wizard save.

2007-07-20 [colin]	2.10.0cvs48

	* src/mainwindow.c
	* src/messageview.c
	* src/toolbar.c
	* src/toolbar.h
		Fix random crashes while navigating
		(GTK_EVENTS_FLUSH)

2007-07-19 [colin]	2.10.0cvs47

	* configure.ac
	* src/main.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/wizard.c
	* src/common/defs.h
	* src/common/utils.c
		Maemo: add an easy way to store data (mails
		and IMAP/NNTP caches) on one of the SD cards,
		and protect against unmounts if needed

2007-07-19 [paul]	2.10.0cvs46

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/gtk/about.c
	* src/pixmaps/claws-mail_logo-small.xpm
		implement a (slightly) different About
		dialog for maemo and add a small version
		of the logo for it
	* src/wizard.c
		use a scrolled window for wizard page 1
		on maemo

2007-07-19 [paul]	2.10.0cvs45

	* src/Makefile.am
		too soon for this line

2007-07-19 [paul]	2.10.0cvs44

	* src/Makefile.am
		fix build on n800

2007-07-19 [colin]	2.10.0cvs43

	* src/wizard.c
		Solve Mail/Mailbox name when specifying
		full /path/to/Mail.

2007-07-18 [colin]	2.10.0cvs42

	* src/inc.c
	* configure.ac
		Fix build on n770

2007-07-18 [colin]	2.10.0cvs41

	* src/inc.c
		Maemo: plug the online/offline system into
		maemo's interfaces to have Claws automatically
		switch according to the system status
	* src/statusbar.c
		Maemo: use HildonBanners to display status
		messages. Renders the main statusbar useless.

2007-07-18 [paul]	2.10.0cvs40

	* src/filtering.c
		fix screen blanking on moving/copying many msgs
	* src/folder.c
		fix processing progressbar and screen blanking
		during processing

2007-07-18 [paul]	2.10.0cvs39

	* src/messageview.c
		revert cvs37, breakage on maemo

2007-07-18 [paul]	2.10.0cvs38

	* src/gtk/gtkutils.c
		make sure we can still build with older GTK's

2007-07-18 [colin]	2.10.0cvs37

	* src/messageview.c