@@ -2703,3 +2703,4 @@
 ( cvs diff -u -r 1.654.2.2756 -r 1.654.2.2757 configure.ac;  cvs diff -u -r 1.115.2.158 -r 1.115.2.159 src/main.c;  cvs diff -u -r 1.204.2.141 -r 1.204.2.142 src/prefs_common.c;  cvs diff -u -r 1.103.2.87 -r 1.103.2.88 src/prefs_common.h;  cvs diff -u -r 1.1.2.57 -r 1.1.2.58 src/wizard.c;  cvs diff -u -r 1.9.2.40 -r 1.9.2.41 src/common/defs.h;  cvs diff -u -r 1.36.2.106 -r 1.36.2.107 src/common/utils.c;  ) > 2.10.0cvs47.patchset
 ( cvs diff -u -r 1.274.2.199 -r 1.274.2.200 src/mainwindow.c;  cvs diff -u -r 1.94.2.141 -r 1.94.2.142 src/messageview.c;  cvs diff -u -r 1.43.2.76 -r 1.43.2.77 src/toolbar.c;  cvs diff -u -r 1.19.2.19 -r 1.19.2.20 src/toolbar.h;  ) > 2.10.0cvs48.patchset
 ( cvs diff -u -r 1.115.2.159 -r 1.115.2.160 src/main.c;  cvs diff -u -r 1.1.2.58 -r 1.1.2.59 src/wizard.c;  ) > 2.10.0cvs49.patchset
+( cvs diff -u -r 1.83.2.111 -r 1.83.2.112 src/mimeview.c;  cvs diff -u -r 1.25.2.43 -r 1.25.2.44 src/stock_pixmap.c;  ) > 2.10.0cvs50.patchset
